--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <p>вул. Саперно-Слобідська 10, Київ</p>
                 </div>
 
-                <div class="reserve__test">
+                <div class="reserve__footer">
                   <div class="reserve__created">
                     <div class="reserve__process">
                       <div class="reserve__process-dote">
@@ -303,6 +303,3 @@
     <script src="build/js/main.js"></script>
   </body>
 </html>
-
-<!-- TODO -->
-<!-- SVG: https://www.freecodecamp.org/news/use-svg-images-in-css-html -->
